<resources>
    <string name="app_name">Onboarding Fold</string>
    <string name="art_cloud">art_cloud</string>
    <string name="get_started">Get Started</string>
    <string name="art_work">art_work</string>
    <string name="hello">Hello!</string>
    <string name="swipe_left">Swipe left to get started</string>
    <string name="Launch_campaign">Launch your next campaign within minutes with Cloud Campaign Monitor.</string>
    <string name="your_own">Your own</string>
    <string name="one_step_away">one step away</string>
    <string name="private_cloud">private cloud</string>
    <string name="is">\u0020is</string>
    <string name="your_premium_cloud">your_premium_cloud</string>
</resources>